Fix image receiving too much height on IE.

--- a/src/scss/Sections/About/About.scss
+++ b/src/scss/Sections/About/About.scss
@@ -4,16 +4,22 @@
 
 section#about {
     box-shadow: 0 -40px 30px 0px shadow(0.5);
+
+    @include for-ie {
+        .about-me {
+            min-height: 1px;
+
+            img.me {
+                min-height: 1px;
+            }
+        }
+    }
     img.me {
         width: 100%;
         height: auto;
         border-radius: 50%;
         -webkit-user-drag: none;
         user-select: none;
-
-        @include for-ie {
-            min-height: 1px;
-        }
     }
 
     .flavor {
